Compositor backdrop isn't updating correctly #44684

Closed
opened 2015-05-12 16:59:54 +02:00 by Sebastian Koenig · 5 comments

System Information
OSX 10.10.2 GTX980

Blender Version
Broken: 8478c71
Worked: 2.74

Short description of error
Tweaking a node in compositor clears the backdrop before showing the new tiles so you cannot compare before/after comp easily.

Exact steps for others to reproduce the error
Open the attached file, render and tweak the RGB node. In 2.74 you see that the new tiles simply replace the previous result, in current master it empties the backdrop before showing the new tiles.
canvas_tweak.blend

**System Information** OSX 10.10.2 GTX980 **Blender Version** Broken: 8478c71 Worked: 2.74 **Short description of error** Tweaking a node in compositor clears the backdrop before showing the new tiles so you cannot compare before/after comp easily. **Exact steps for others to reproduce the error** Open the attached file, render and tweak the RGB node. In 2.74 you see that the new tiles simply replace the previous result, in current master it empties the backdrop before showing the new tiles. [canvas_tweak.blend](https://archive.blender.org/developer/F173412/canvas_tweak.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Dalai Felinto was assigned by Sebastian Koenig 2015-05-12 16:59:54 +02:00
Author
Member

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k

This issue was referenced by 3e519860e5

This issue was referenced by 3e519860e5f0aa6a5cd1a1b71f9b07119e59593e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 3e519860e5.

Closed by commit 3e519860e5.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44684
No description provided.