Fix T44684 Compositor backdrop isn't updating correctly